Update GUIDE.md with VM pipeline docs and McDonald's status
Add section covering the subprocess (dalvikvm) pipeline architecture,
tested apps table (including McDonald's 119K classes), shell commands
for running real APKs, stub inventory, and known limitations.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>